--- a/archives/toutiao-search/2024-02-21.md
+++ b/archives/toutiao-search/2024-02-21.md
@@ -1,65 +1,81 @@
 # 2024-02-21
 
-共 172 条
+共 186 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Feb 21 2024 10:12:24 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Feb 21 2024 11:00:55 GMT+0800 (China Standard Time) -->
 1. [台军方称不会介入大陆海警临检台船](https://so.toutiao.com/search?keyword=台军方称不会介入大陆海警临检台船)
 1. [山东泰山晋级亚冠8强](https://so.toutiao.com/search?keyword=山东泰山晋级亚冠8强)
-1. [点燃新年消费“第一把火”](https://so.toutiao.com/search?keyword=点燃新年消费“第一把火”)
-1. [网红cos神明赵世子引众怒](https://so.toutiao.com/search?keyword=网红cos神明赵世子引众怒)
-1. [央视网评“秦朗巴黎丢作业”事件](https://so.toutiao.com/search?keyword=央视网评“秦朗巴黎丢作业”事件)
+1. [数字赋能保障春节出行安全顺畅](https://so.toutiao.com/search?keyword=数字赋能保障春节出行安全顺畅)
+1. [媒体：台当局应全面交代渔船事件](https://so.toutiao.com/search?keyword=媒体：台当局应全面交代渔船事件)
+1. [网传父亲出轨儿子女友 派出所回应](https://so.toutiao.com/search?keyword=网传父亲出轨儿子女友+派出所回应)
 1. [史上最大力度降息意味什么](https://so.toutiao.com/search?keyword=史上最大力度降息意味什么)
 1. [直击多地雪后早高峰](https://so.toutiao.com/search?keyword=直击多地雪后早高峰)
+1. [终于知道秦岭为啥是南北分界线](https://so.toutiao.com/search?keyword=终于知道秦岭为啥是南北分界线)
+1. [冻雨落下瞬间凝结成冰](https://so.toutiao.com/search?keyword=冻雨落下瞬间凝结成冰)
+1. [郑州公租房可以买卖了？假的](https://so.toutiao.com/search?keyword=郑州公租房可以买卖了？假的)
+1. [叛逃至乌的俄飞行员被枪杀](https://so.toutiao.com/search?keyword=叛逃至乌的俄飞行员被枪杀)
+1. [猎冰张颂文一镜封神](https://so.toutiao.com/search?keyword=猎冰张颂文一镜封神)
+1. [兄妹连续8年回残破老家探望贴对联](https://so.toutiao.com/search?keyword=兄妹连续8年回残破老家探望贴对联)
 1. [百亿级私募巨头宁波灵均道歉](https://so.toutiao.com/search?keyword=百亿级私募巨头宁波灵均道歉)
+1. [记者：泰山本次又为中超赚了2分](https://so.toutiao.com/search?keyword=记者：泰山本次又为中超赚了2分)
+1. [知情人回应男子捡手机后收到练功券](https://so.toutiao.com/search?keyword=知情人回应男子捡手机后收到练功券)
+1. [多部门已介入核查柳鑫宇自曝事件](https://so.toutiao.com/search?keyword=多部门已介入核查柳鑫宇自曝事件)
+1. [网友指出《热辣滚烫》不合理之处](https://so.toutiao.com/search?keyword=网友指出《热辣滚烫》不合理之处)
+1. [男子疑似借帮小女孩爬滑梯猥亵女孩](https://so.toutiao.com/search?keyword=男子疑似借帮小女孩爬滑梯猥亵女孩)
+1. [柳鑫宇否认私生活混乱](https://so.toutiao.com/search?keyword=柳鑫宇否认私生活混乱)
+1. [胡塞取得开战以来最大战果](https://so.toutiao.com/search?keyword=胡塞取得开战以来最大战果)
+1. [什么是寒假作业的“中国速度”](https://so.toutiao.com/search?keyword=什么是寒假作业的“中国速度”)
+1. [秦PLUS DM-i官降2万元](https://so.toutiao.com/search?keyword=秦PLUS+DM-i官降2万元)
+1. [主人发烧去山里打针 狗狗一路寻找](https://so.toutiao.com/search?keyword=主人发烧去山里打针+狗狗一路寻找)
+1. [被传疑感染艾滋 男星许凯报警](https://so.toutiao.com/search?keyword=被传疑感染艾滋+男星许凯报警)
+1. [春节后鸡蛋价格大跳水](https://so.toutiao.com/search?keyword=春节后鸡蛋价格大跳水)
+1. [网友：高合开了个很不好的头](https://so.toutiao.com/search?keyword=网友：高合开了个很不好的头)
+1. [中国女游客泰国搭车险遭司机强暴](https://so.toutiao.com/search?keyword=中国女游客泰国搭车险遭司机强暴)
+1. [央视网评“秦朗巴黎丢作业”事件](https://so.toutiao.com/search?keyword=央视网评“秦朗巴黎丢作业”事件)
+1. [贾玲还是原来的贾玲](https://so.toutiao.com/search?keyword=贾玲还是原来的贾玲)
+1. [贾玲说拍《你好李焕英》时伤透了心](https://so.toutiao.com/search?keyword=贾玲说拍《你好李焕英》时伤透了心)
+1. [媒体谈韩国医生辞职潮](https://so.toutiao.com/search?keyword=媒体谈韩国医生辞职潮)
+1. [《热辣滚烫》背后的宣传“密码”](https://so.toutiao.com/search?keyword=《热辣滚烫》背后的宣传“密码”)
+1. [郑州下雪速度赶不上扫雪车清理速度](https://so.toutiao.com/search?keyword=郑州下雪速度赶不上扫雪车清理速度)
+1. [航班延误男子花两千打车回上海上班](https://so.toutiao.com/search?keyword=航班延误男子花两千打车回上海上班)
+1. [哈马斯第一次公布战损](https://so.toutiao.com/search?keyword=哈马斯第一次公布战损)
+1. [西安冻雨致多车连撞](https://so.toutiao.com/search?keyword=西安冻雨致多车连撞)
+1. [台民众希望两岸和平不要开战](https://so.toutiao.com/search?keyword=台民众希望两岸和平不要开战)
+1. [非盟峰会呼吁在加沙地带立即停火](https://so.toutiao.com/search?keyword=非盟峰会呼吁在加沙地带立即停火)
+1. [金正恩收到普京赠送的俄产轿车](https://so.toutiao.com/search?keyword=金正恩收到普京赠送的俄产轿车)
+1. [节后浙江疾控艾滋病咨询增两三倍](https://so.toutiao.com/search?keyword=节后浙江疾控艾滋病咨询增两三倍)
+1. [胡塞公布据称是击落美军无人机视频](https://so.toutiao.com/search?keyword=胡塞公布据称是击落美军无人机视频)
+1. [律师解读男子还手机收到练功券红包](https://so.toutiao.com/search?keyword=律师解读男子还手机收到练功券红包)
+1. [贵阳山火系57岁男子焚烧杂草引发](https://so.toutiao.com/search?keyword=贵阳山火系57岁男子焚烧杂草引发)
+1. [英超：曼城1-0布伦特福德](https://so.toutiao.com/search?keyword=英超：曼城1-0布伦特福德)
+1. [胖东来尝面女员工说自己给部门抹黑](https://so.toutiao.com/search?keyword=胖东来尝面女员工说自己给部门抹黑)
+1. [山西晋城冻雨致多车连撞](https://so.toutiao.com/search?keyword=山西晋城冻雨致多车连撞)
+1. [在青岛很少下这么大的雪](https://so.toutiao.com/search?keyword=在青岛很少下这么大的雪)
+1. [金晨回应与胡夏恋情](https://so.toutiao.com/search?keyword=金晨回应与胡夏恋情)
+1. [冻雨会给交通带来哪些影响](https://so.toutiao.com/search?keyword=冻雨会给交通带来哪些影响)
+1. [点燃新年消费“第一把火”](https://so.toutiao.com/search?keyword=点燃新年消费“第一把火”)
+1. [网红cos神明赵世子引众怒](https://so.toutiao.com/search?keyword=网红cos神明赵世子引众怒)
 1. [高速免费政策宽限半小时？假的](https://so.toutiao.com/search?keyword=高速免费政策宽限半小时？假的)
 1. [福建游神穿80斤装扮通宵走22个村](https://so.toutiao.com/search?keyword=福建游神穿80斤装扮通宵走22个村)
 1. [实拍多地冻雨](https://so.toutiao.com/search?keyword=实拍多地冻雨)
-1. [多部门已介入核查柳鑫宇自曝事件](https://so.toutiao.com/search?keyword=多部门已介入核查柳鑫宇自曝事件)
-1. [网友指出《热辣滚烫》不合理之处](https://so.toutiao.com/search?keyword=网友指出《热辣滚烫》不合理之处)
-1. [冻雨落下瞬间凝结成冰](https://so.toutiao.com/search?keyword=冻雨落下瞬间凝结成冰)
-1. [柳鑫宇否认私生活混乱](https://so.toutiao.com/search?keyword=柳鑫宇否认私生活混乱)
-1. [叛逃至乌的俄飞行员被枪杀](https://so.toutiao.com/search?keyword=叛逃至乌的俄飞行员被枪杀)
 1. [《南来北往》大力是如何被抢救的](https://so.toutiao.com/search?keyword=《南来北往》大力是如何被抢救的)
-1. [贾玲说拍《你好李焕英》时伤透了心](https://so.toutiao.com/search?keyword=贾玲说拍《你好李焕英》时伤透了心)
-1. [中国女游客泰国搭车险遭司机强暴](https://so.toutiao.com/search?keyword=中国女游客泰国搭车险遭司机强暴)
 1. [美一票否决加沙决议 中方代表发声](https://so.toutiao.com/search?keyword=美一票否决加沙决议+中方代表发声)
-1. [胡塞取得开战以来最大战果](https://so.toutiao.com/search?keyword=胡塞取得开战以来最大战果)
-1. [网友：高合开了个很不好的头](https://so.toutiao.com/search?keyword=网友：高合开了个很不好的头)
 1. [专家谈美首次明确支持加沙“停火”](https://so.toutiao.com/search?keyword=专家谈美首次明确支持加沙“停火”)
-1. [秦PLUS DM-i官降2万元](https://so.toutiao.com/search?keyword=秦PLUS+DM-i官降2万元)
-1. [春节后鸡蛋价格大跳水](https://so.toutiao.com/search?keyword=春节后鸡蛋价格大跳水)
-1. [主人发烧去山里打针 狗狗一路寻找](https://so.toutiao.com/search?keyword=主人发烧去山里打针+狗狗一路寻找)
-1. [知情人回应男子捡手机后收到练功券](https://so.toutiao.com/search?keyword=知情人回应男子捡手机后收到练功券)
-1. [哈马斯第一次公布战损](https://so.toutiao.com/search?keyword=哈马斯第一次公布战损)
 1. [哺乳期妈妈看着奶茶馋哭了](https://so.toutiao.com/search?keyword=哺乳期妈妈看着奶茶馋哭了)
-1. [航班延误男子花两千打车回上海上班](https://so.toutiao.com/search?keyword=航班延误男子花两千打车回上海上班)
-1. [终于知道秦岭为啥是南北分界线](https://so.toutiao.com/search?keyword=终于知道秦岭为啥是南北分界线)
-1. [贾玲还是原来的贾玲](https://so.toutiao.com/search?keyword=贾玲还是原来的贾玲)
-1. [什么是寒假作业的“中国速度”](https://so.toutiao.com/search?keyword=什么是寒假作业的“中国速度”)
-1. [西安冻雨致多车连撞](https://so.toutiao.com/search?keyword=西安冻雨致多车连撞)
-1. [金正恩收到普京赠送的俄产轿车](https://so.toutiao.com/search?keyword=金正恩收到普京赠送的俄产轿车)
 1. [10对军人家庭晒出幸福结婚照](https://so.toutiao.com/search?keyword=10对军人家庭晒出幸福结婚照)
-1. [郑州下雪速度赶不上扫雪车清理速度](https://so.toutiao.com/search?keyword=郑州下雪速度赶不上扫雪车清理速度)
-1. [胖东来尝面女员工说自己给部门抹黑](https://so.toutiao.com/search?keyword=胖东来尝面女员工说自己给部门抹黑)
 1. [哈佛女生小学时想去剑桥被老师取笑](https://so.toutiao.com/search?keyword=哈佛女生小学时想去剑桥被老师取笑)
-1. [在青岛很少下这么大的雪](https://so.toutiao.com/search?keyword=在青岛很少下这么大的雪)
-1. [非盟峰会呼吁在加沙地带立即停火](https://so.toutiao.com/search?keyword=非盟峰会呼吁在加沙地带立即停火)
 1. [媒体：女星家被偷空暴露“美国病”](https://so.toutiao.com/search?keyword=媒体：女星家被偷空暴露“美国病”)
 1. [为何Sora没有先出现在中国](https://so.toutiao.com/search?keyword=为何Sora没有先出现在中国)
 1. [京沈高速一大巴车起火烧成铁架](https://so.toutiao.com/search?keyword=京沈高速一大巴车起火烧成铁架)
-1. [被传疑感染艾滋 男星许凯报警](https://so.toutiao.com/search?keyword=被传疑感染艾滋+男星许凯报警)
 1. [专家谈台海巡部门叫嚣“继续执法”](https://so.toutiao.com/search?keyword=专家谈台海巡部门叫嚣“继续执法”)
 1. [2024年1月汽车销量排行榜](https://so.toutiao.com/search?keyword=2024年1月汽车销量排行榜)
 1. [什么是高速幽灵堵车](https://so.toutiao.com/search?keyword=什么是高速幽灵堵车)
-1. [网传父亲出轨儿子女友 派出所回应](https://so.toutiao.com/search?keyword=网传父亲出轨儿子女友+派出所回应)
-1. [台民众希望两岸和平不要开战](https://so.toutiao.com/search?keyword=台民众希望两岸和平不要开战)
 1. [97岁奶奶搬出传家大鼓迎炮龙节](https://so.toutiao.com/search?keyword=97岁奶奶搬出传家大鼓迎炮龙节)
 1. [福建游神回宫瞬间](https://so.toutiao.com/search?keyword=福建游神回宫瞬间)
 1. [买到烂尾楼后可以停贷吗](https://so.toutiao.com/search?keyword=买到烂尾楼后可以停贷吗)
 1. [100万房贷30年少还5.2万](https://so.toutiao.com/search?keyword=100万房贷30年少还5.2万)
 1. [成都高合汽车门店全部关闭](https://so.toutiao.com/search?keyword=成都高合汽车门店全部关闭)
-1. [媒体谈韩国医生辞职潮](https://so.toutiao.com/search?keyword=媒体谈韩国医生辞职潮)
 1. [中国货船营救遇险被困的美国男子](https://so.toutiao.com/search?keyword=中国货船营救遇险被困的美国男子)
 1. [河南高速“硬核”除雪模式启动](https://so.toutiao.com/search?keyword=河南高速“硬核”除雪模式启动)
 1. [安理会加沙决议再遭美国一票否决](https://so.toutiao.com/search?keyword=安理会加沙决议再遭美国一票否决)
@@ -73,7 +89,6 @@
 1. [山东菏泽下霰了](https://so.toutiao.com/search?keyword=山东菏泽下霰了)
 1. [日媒：泰山攻防转换让川崎应接不暇](https://so.toutiao.com/search?keyword=日媒：泰山攻防转换让川崎应接不暇)
 1. [第一批免签去新加坡的人快“破产”](https://so.toutiao.com/search?keyword=第一批免签去新加坡的人快“破产”)
-1. [金晨回应与胡夏恋情](https://so.toutiao.com/search?keyword=金晨回应与胡夏恋情)
 1. [李一舟199元AI课一年卖了5000万](https://so.toutiao.com/search?keyword=李一舟199元AI课一年卖了5000万)
 1. [崔康熙：鼓励球员往正向走](https://so.toutiao.com/search?keyword=崔康熙：鼓励球员往正向走)
 1. [女裁判称顺丰发丢6万元快递赔千元](https://so.toutiao.com/search?keyword=女裁判称顺丰发丢6万元快递赔千元)
@@ -109,7 +124,6 @@
 1. [考公正在成为印度年轻人的执念](https://so.toutiao.com/search?keyword=考公正在成为印度年轻人的执念)
 1. [名嘴批民进党制造事端挑起两岸矛盾](https://so.toutiao.com/search?keyword=名嘴批民进党制造事端挑起两岸矛盾)
 1. [媒体：高利率下美银行业风险回升](https://so.toutiao.com/search?keyword=媒体：高利率下美银行业风险回升)
-1. [媒体：台当局应全面交代渔船事件](https://so.toutiao.com/search?keyword=媒体：台当局应全面交代渔船事件)
 1. [降息！5年期LPR下调25个基点](https://so.toutiao.com/search?keyword=降息！5年期LPR下调25个基点)
 1. [吴清到任后节日期间不休息连轴加班](https://so.toutiao.com/search?keyword=吴清到任后节日期间不休息连轴加班)
 1. [外科专家吴萍山逝世](https://so.toutiao.com/search?keyword=外科专家吴萍山逝世)
